--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bdf1d4b
+	base = 448c163
 	trimbase = 
 	parent = release/kinetic/agni_tf_tools
-	previous = 
+	previous = bdf1d4b
