--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f2f17e
+	base = 1f9ca4c
 	trimbase = 
 	parent = arch/kinetic/agni_tf_tools
-	previous = 
+	previous = 0f2f17e
