--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b8b7d0
+	base = e927f34
 	trimbase = 
 	parent = release/lunar/agni_tf_tools
-	previous = 
+	previous = 7b8b7d0
