--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84e23e3
+	base = 759688b
 	trimbase = 
 	parent = arch/lunar/agni_tf_tools
-	previous = 
+	previous = 84e23e3
